# multiagent-browser

./: .dockerignore  .env.chroma.template  .env.example  .gitignore  AGENTS.md  DOCUMENT_EDITOR_CHANGES.md  LICENSE  README.md  build-electron.ps1  dev-config.json  digest.txt  find_ag_ui_path.py  package.json  pyproject.toml  requirements.txt  send_agui_chat.py  start-dev.bat  start-dev.ps1  start-dev.sh  test_file_sync.py  webui.py
.cursor/: web-ui.md
.cursor/rules/: 050-web-ui-project-structure.mdc  100-main-orchestrator-pattern.mdc  200-backend-python-standards.mdc  300-centralized-logging.mdc
.gemini/: GEMINI.md  settings.json
.gemini/docs/: ag-ui-claude.txt  ag-ui-protocol-ag-ui-8a5edab282632443.txt  ag-uidocs.txt  ag-uipysdk.txt  ag-uitssdk.txt
.github/workflows/: build.yml
.well-known/: README.md  agents.json
.well-known/agents/: browser_use.json  deep_research.json  document_editor.json
assets/: favicon_placeholder.txt  generate_favicon.py
backend/src/web_ui/: main.py
backend/src/web_ui/agent/: __init__.py
backend/src/web_ui/agents/: document_editing_agent.py
backend/src/web_ui/api/: __init__.py  dependencies.py  documents.py  server.py  user_documents.py
backend/src/web_ui/browser/: custom_browser.py  custom_context.py
backend/src/web_ui/controller/: custom_controller.py
backend/src/web_ui/database/: __init__.py  chroma_manager.py  config.py  connection.py  document_pipeline.py  mcp_config_manager.py  models.py  session.py  user_db.py  user_state_manager.py  utils.py
data/: mcp.json
docs/: A2A_AGENT_CARDS.md  A2A_AGENT_CARDS_REGISTRY.md  A2A_IMPLEMENTATION_SUMMARY.md  A2A_INTEGRATION_GUIDE.md  A2A_PROTOCOL_COMPLIANCE.md  AG-UI-LLM.txt  copilotkit-docs.txt  google-a2a-a2a.txt
frontend/: .eslintrc.json  .prettierignore  .prettierrc  App.tsx  README.md  index.html  index.tsx  metadata.json  package.json  tailwind.config.js  types.ts  vite.config.ts
frontend/components/: ChatPanel.tsx  EditorPanel.tsx  FileExplorer.tsx  SettingsModal.tsx
frontend/public/: electron.js  preload.cjs  preload.js
frontend/services/: documentEditingService.ts
frontend/src/: App.tsx
frontend/src/components/: ChatPanel.tsx  DocumentCreator.tsx  EditorPanel.tsx  EditorRibbon.tsx  EditorView.tsx  FileExplorer.tsx  SettingsModal.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/services/: agUiService.ts  agentService.ts  authService.ts  userStateService.ts
frontend/src/stores/: useAppStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: electron.d.ts  index.ts
frontend/src/utils/: api.ts  logging.ts
frontend/src/views/: ChatView.tsx  Editor.tsx  EditorView.tsx  SettingsView.tsx  TasksView.tsx
frontend/types/: index.ts
mcp/server/: .cursorignore  .gitignore  README.md  README_old.md
mcp/server/.cursor/: AiChemistForge.md
mcp/server/Compendium/: README.md  mcp.json.example  typescript-mcp-sdk.md
mcp/server/ToolRack/Python/: .env.example  mcp_config_template.json  pyproject.toml
mcp/server/ToolRack/Python/src/unified_mcp_server/prompts/: __init__.py  analysis_prompts.py
mcp/server/ToolRack/Python/src/unified_mcp_server/resources/: __init__.py  cursor_resources.py  filesystem_resources.py
mcp/server/ToolRack/Python/src/unified_mcp_server/server/: __init__.py  config.py  logging.py
mcp/server/ToolRack/Python/src/unified_mcp_server/tools/database/: cursor_database_tool.py
mcp/server/ToolRack/Python/src/unified_mcp_server/tools/filesystem/: __init__.py  codebase_ingest_tool.py  file_tree_tool.py
mcp/server/ToolRack/Python/src/unified_mcp_server/tools/reasoning/: __init__.py  sequential_thinking_tools.py
mcp/server/ToolRack/Python/src/unified_mcp_server/utils/: __init__.py  caching.py  exceptions.py  validators.py
mcp/server/ToolRack/Python/tests/: README.md  conftest.py  debug_server.py  run_tests.py  test_mcp_connection.py  test_mcp_server.py  test_registry.py  test_server.py  test_simple.py
mcp/server/ToolRack/Rust/: .gitignore  Cargo.toml  LICENSE  dist-workspace.toml
mcp/server/ToolRack/Rust/docs/: _coverpage.md  _sidebar.md  quickstart.md
mcp/server/ToolRack/Rust/docs/_configs/: claude-desktop.md
mcp/server/ToolRack/Rust/docs/guide/: claude-desktop.md  install.md
mcp/server/ToolRack/Rust/src/: error.rs  fs_service.rs  server.rs
mcp/server/ToolRack/Rust/src/tools/: create_directory.rs  directory_tree.rs  get_file_info.rs  list_allowed_directories.rs  list_directory.rs  write_file.rs
mcp/server/ToolRack/Rust/test_files/: test1.txt
mcp/server/ToolRack/Rust/tests/: test_tools.rs
mcp/server/ToolRack/Rust/tests/common/: common.rs
plans/: AUTHENTICATION_DEBUG_REPORT.md  BUG_FIXES_REPORT.md  DEVELOPMENT.md  FINAL_MIDDLEWARE_FIXES_SUMMARY.md  MIDDLEWARE_ERRORS_FIX.md  STARTUP_GUIDE.md  a_2_a_agents_high_level_implementation_plan_handoff.md  auth_debug_report.json  digest (1).txt  digest.txt
plans/chroma-database-integration/: README.md
plans/document-editor-integration/: IMPLEMENTATION_COMPLETE.md  README.md
plans/mcp-chroma-integration/: README.md
plans/react-frontend-migration/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  README.md  START_HERE.md
plans/testruns/: tester-agent-prompt.md
scripts/: astral-tools.ps1  verify_bug_fixes.py
src/web_ui/: main.py
src/web_ui/api/: server.py
src/web_ui/database/: __init__.py  config.py  connection.py  document_pipeline.py  mcp_config_manager.py  models.py  utils.py
src/web_ui/mcp_server/: agents.md
src/web_ui/services/: mcp_service.py
src/web_ui/utils/: llm_provider.py
src/web_ui/webui/: interface.py  webui_manager.py
tests/: test_agents.py  test_auth.py  test_auth_integration.py  test_controller.py  test_database.py  test_file_sync.py  test_llm_api.py  test_mcp_integration.py  test_phase2.py  test_server.py  test_sqlite_auth.py
webui/: interface.py  webui_manager.py
webui/pages/: agents_page.py  document_editor_page.py  settings_page.py
webui/tabs/: browser_use_agent_tab.py  deep_research_agent_tab.py  document_editor_tab.py  settings_tab.py
(+195 files in other folders)
