[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.7" ] #! AI Leave this is correct always for uv

[project]
authors = [
    { name = "Steve", email = "simpleflowworks@gmail.com" },
]
dependencies = [
    "browser-use>=0.1.48",
    "pyperclip>=1.9.0",
    "gradio>=5.27.0",
    "json-repair",
    "langchain-mistralai>=0.2.4",
    "MainContentExtractor==0.0.4",
    "langchain-ibm>=0.3.10",
    "langchain_mcp_adapters>=0.0.9",
    "langgraph>=0.3.34",
    "langchain-community",
    "chromadb==0.5.23",
    "pydantic[email]>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    # Authentication dependencies for React migration
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "ag-ui-protocol<=0.1.9",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-openai",
]
description = "Web UI application"
license = { file = "LICENSE" }
name = "web_ui"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
link-mode = "copy"

    # UV build backend configuration for backend/src structure
    [tool.uv.build-backend]
    module-root = "backend/src"

[tool.ruff]
line-length    = 88
target-version = "py313"

    [tool.ruff.lint]
    ignore = [  ]
    select = [ "E", "F", "I", "N", "W", "UP" ] # Added UP for f-string formatting rules

    [tool.ruff.format]
    indent-style = "space"
    quote-style  = "double"

    # F-string formatting is enabled by default in Ruff 0.9.0+

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "auth: marks tests related to authentication",
    "database: marks tests related to database functionality",
    "mcp: marks tests related to MCP integration",
    "browser: marks tests requiring browser automation",
]
python_classes = [ "Test*" ]
python_files = [ "test_*.py", "*_test.py" ]
python_functions = [ "test_*" ]
pythonpaths = [ "backend" ]
testpaths = [ "tests", "backend/tests" ]

# Package discovery - src is now in backend
[tool.setuptools.packages.find]
include = [ "src*" ]
where   = [ "backend" ]
