[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.7" ]

[project]
authors = [ { name = "Steve", email = "steve@simpleflowworks.com" } ]
dependencies = [
    "fastmcp>=2.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "pathlib>=1.0.1",
    "typing>=3.7.4.3",
    "python-dotenv>=1.1.0",
    "uv>=0.7.8",
]
description = "AiChemistForge - Unified MCP Server with organized tools"
license = { text = "MIT" }
name = "unified-mcp-server"
requires-python = ">=3.13"
version = "1.0.0"

    [project.optional-dependencies]
    dev = [
        "pytest>=7.0.0",
        "pytest-asyncio>=0.21.0",
        "black>=23.0.0",
        "ruff>=0.1.0",
        "mypy>=1.0.0",
    ]

    [project.scripts]
    unified-mcp-server = "unified_mcp_server.main:main"

[tool.setuptools.packages.find]
include = [ "unified_mcp_server*" ]
where   = [ "src" ]

[tool.black]
line-length    = 88
target-version = [ 'py313' ]

[tool.ruff]
line-length    = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict         = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
addopts                            = "-ra -q"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode                       = "auto"
minversion                         = "7.0"
testpaths                          = [ "tests" ]
